--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Robert Chheav | Software Engineer</title>
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico">
   </head>
   <body>
     <div id="root"></div>
